+ Added "Tag to use this snippet" in the Snippets tab
+ Added en-messages.php.template to i18n directory of core to assist translators
+ Added admin section option to choose default tab after login (issue 29)
+ Added display of latest plugin version in Frog admin section
+ Added option to admin screen: allow html in page title. (default: false) (issue 66)
+ Added favicon
- Fixed lacking PNG support for IE6 (issue 64)
- Fixed bug allowing HTML code in page title, now filtered with Kses
- $values => $value in Page.childrenCount()
- Fixed security issue with DB username password in index.php
- Fixed incorrect return and if statement in DoPgsql.php
- Fixed accidental assignment bug in Framework.php (issue 43)
- Fixed bug where "Files" tab was accessible to users without roles. Now restricted to "administrator,developer,editor" (issue 42)
- Fixed bug where using permissions string as parameter to addController had no effect (issue 41)
- Fixed "s" echo for count in comment-each snippet of comment plugin
. Updated core plugin index.php files to make use of the new "latest" functionality
. Updated the comments plugin
. Updated Dutch translation
. Updated default Layout to find metadata from Edit.Page.Metadata tab
. Updated default Normal Layout to check for existence of keywords, otherwise use default strings
. Corrected the default RSS Feed, should now validate. Also added RSS subscription link tag to default Normal template.
. Modified the place of the "filter" input in Snippets
. Removed comments css code from admin.css
. Changed default footer snippet to read copyright Madebyfrog.com instead of Philworks.com
. Changed plugin list "from ..." wording to "by ...".
. Updated Russian translation
. Typo corrections on dummy text for default installation

0.9.3 - released 2008-08-14

+ license change to AGPLv3
+ auto page tabs generation "javascript"
+ i18n for filemanager plugin - fr
+ i18n for plugin api
+ new improved installation script ( without choosing the use of PDO )