@@ -1,0 +1,39 @@
+<?php
+
+/**
+ * this file has been translated by: Philippe Archambault
+ */
+
+return array(
+
+// files
+'File' => 'Bestand',
+'Size' => 'Grootte',
+'Permissions' => 'Machtigingen',
+'Change mode' => 'Wijzig de modus',
+'Remove file' => 'Verwijder bestand',
+'Create new file' => 'Creëer nieuw bestand',
+'Create new directory' => 'Creëer nieuwe directory',
+'Upload file' => 'Upload bestand',
+'rename' => 'hernoem',
+'Create' => 'Maak aan',
+'overwrite it?' => 'overschrijven?',
+
+'File :name has been created with success!' => 'Het bestand <strong>:name</strong> is successvol aangemaakt!',
+'Directory is not writable! File has not been saved!' => 'Directory is niet schrijfbaar!',
+'File :name has been created!' => 'Het bestand <strong>:name</strong> is aangemaakt!',
+'File :name has not been created!' => 'Het bestand <strong>:name</strong> is niet aangemaakt!',
+'Directory :name has been created!' => 'De directory <strong>:name</strong> is aangemaakt!',
+'Directory :name has not been created!' => 'De directory <strong>:name</strong> is niet aangemaakt!',
+'File :name has been deleted with success!' => 'Het bestand <strong>:name</strong> is successvol verwijderd!',
+'File :name has not been deleted!' => 'Het bestand <strong>:name</strong> is niet verwijderd!',
+'Directory :name has been deleted with success!' => 'De directory <strong>:name</strong> is successvol verwijderd!',
+'Directory :name has not been deleted!' => 'De directory <strong>:name</strong> is niet verwijderd!',
+'File :name has been uploaded with success!' => 'Het bestand <strong>:name</strong> is successvol geupload!',
+'File has not been uploaded!' => 'Het bestand is niet geupload!',
+'Permissions of file has been changed!' => 'De machtigingen op het bestand zijn gewijzigd!',
+'Permissions of directory has been changed!' => 'De machtigingen op de directory zijn gewijzigd!',
+'Change mode has not been done!' => 'Modus wijziging is niet uitgevoerd!',
+'File or directory not found!' => 'Het bestand of de directory werdt niet gevonden!',
+
+);
